--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,15 @@
 
 @font-face {
   font-family: "NanumBarunGothic";
-  src: url("/fonts/NanumBarunGothic.eot");
-  src: url("/fonts/NanumBarunGothic.eot") format("embedded-opentype"), url("/fonts/NanumBarunGothic.woff") format("woff");
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix") format("embedded-opentype"), url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff") format("woff"), url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf") format("truetype");
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "NanumBarunGothic";
 }
 
 a {
